--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "llmpdf"
 version = "0.1.0"
 description = ""
-authors = ["karim"]
+authors = ["Karim Baklouti & Bassem Ben Hamed"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
